# open_vins

./: .clang-format  CMakeLists.txt  ReadMe.md
ov_core/: CMakeLists.txt
ov_core/src/cam/: CamBase.h  CamEqui.h  CamRadtan.h
ov_core/src/cpi/: CpiBase.h  CpiV1.h  CpiV2.h
ov_core/src/feat/: Feature.cpp  Feature.h  FeatureDatabase.h  FeatureHelper.h  FeatureInitializer.cpp  FeatureInitializer.h  FeatureInitializerOptions.h
ov_core/src/plot/: matplotlibcpp.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
ov_core/src/track/: Grider_FAST.h  TrackAruco.cpp  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.cpp  TrackSIM.h
ov_core/src/types/: IMU.h  JPLQuat.h  Landmark.cpp  Landmark.h  LandmarkRepresentation.h  PoseJPL.h  Type.h  Vec.h
ov_core/src/utils/: dataset_reader.h  opencv_lambda_body.h  opencv_yaml_parse.h  print.cpp  print.h  quat_ops.h  sensor_data.h  tic_toc.h
ov_init/: CMakeLists.txt
ov_init/src/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h
ov_init/src/factors/: Factor_GenericPrior.h  Factor_ImageReprojCalib.h  Factor_ImuCPIv1.h  State_JPLQuatLocal.h
ov_init/src/init/: InertialInitializer.cpp  InertialInitializer.h  InertialInitializerOptions.h
ov_init/src/sim/: Simulator.cpp  Simulator.h
ov_init/src/static/: StaticInitializer.cpp  StaticInitializer.h
ov_init/src/utils/: helper.h
ov_msckf/: CMakeLists.txt
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/sim/: Simulator.cpp  Simulator.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterOptions.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
